--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,12 @@
 {
     "name": "mrshanebarron/avatar",
-    "description": "Avatar and avatar group component for Laravel",
-    "keywords": ["laravel", "avatar", "user", "image", "livewire", "vue"],
+    "description": "Avatar component for Laravel - supports Livewire and Vue",
+    "keywords": ["laravel", "livewire", "vue", "avatar", "profile", "image"],
     "license": "MIT",
     "authors": [{"name": "Shane Barron", "email": "mrshanebarron@gmail.com"}],
-    "require": {
-        "php": "^8.1",
-        "illuminate/support": "^10.0|^11.0|^12.0",
-        "livewire/livewire": "^3.0"
-    },
-    "require-dev": {
-        "orchestra/testbench": "^8.0|^9.0",
-        "pestphp/pest": "^2.0"
-    },
-    "autoload": {
-        "psr-4": {"LaravelDesign\\avatar\\": "src/"}
-    },
-    "autoload-dev": {
-        "psr-4": {"LaravelDesign\\avatar\\Tests\\": "tests/"}
-    },
-    "extra": {
-        "laravel": {
-            "providers": ["LaravelDesign\\avatar\\avatarServiceProvider"]
-        }
-    },
-    "config": {"sort-packages": true},
+    "require": {"php": "^8.1", "illuminate/support": "^10.0|^11.0|^12.0"},
+    "autoload": {"psr-4": {"MrShaneBarron\\Avatar\\": "src/"}},
+    "extra": {"laravel": {"providers": ["MrShaneBarron\\Avatar\\AvatarServiceProvider"]}},
     "minimum-stability": "stable",
     "prefer-stable": true
 }
